# data-science

./: .dockerignore  .env.example  Dockerfile  docker-compose.yml  pyproject.toml  requirement.txt  tcs_stock_data.csv
.github/workflows/: docker-build.yml
api-project/: .env  README.md  main.py  pyproject.toml
api_project/: .env  database.py  main.py  pyproject.toml  secrets.toml
data-structure/: Array.py
stock-market-analysis/: app.py  main.py  tcs_stock_data.csv
