[project]
name = "data-science"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.1",
    "matplotlib>=3.10.9",
    "numpy>=2.4.5",
    "pandas>=3.0.3",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.49",
    "streamlit>=1.57.0",
    "uvicorn>=0.47.0",
    "yfinance>=1.3.0",
]

[tool.uv.workspace]
members = [
    "api-project",
]
